--- a/Code/basicEDA.ipynb
+++ b/Code/basicEDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2TdOqMvvfyTk283UdQAJg",
+      "authorship_tag": "ABX9TyPu3hIcK56D3yjEu9NwQBPS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "H7ubmnUYSdVY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H7ubmnUYSdVY",
+        "outputId": "5b95ae3c-81f7-4f80-ab18-4677c4a6093f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HELLO WORLD!\n"
+          ]
+        }
+      ],
       "source": [
-        "# This is a test"
+        "# This is a test\n",
+        "\n",
+        "print(\"HELLO WORLD!\")"
       ]
     }
   ]
