Wrote straightforward pseudocode for time EDA

--- a/Code/basicEDA.ipynb
+++ b/Code/basicEDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyI1Nm+MXup5c/qoBmIykq",
+      "authorship_tag": "ABX9TyNkIXp3ciheyPql/p5n3V+6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "8vG9es7nULlf"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
         "id": "cEIgl_cbVN_v",
         "outputId": "03e6b4c0-f231-4668-c26e-8fba83c278d3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -567,6 +567,20 @@
           "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sort dataframe by date\n",
+        "# Get list of patient's AccountNos\n",
+        "# Go through each patient's AccountNos and get the Admit.Date column for the subset of that corresponding dataframe\n",
+        "# Get difference between last admit.date and inital.date and assign it to patietn AccountNo in dictionary"
+      ],
+      "metadata": {
+        "id": "B1e3C4yeH8qC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
