Another potential algo

--- a/Code/basicEDA.ipynb
+++ b/Code/basicEDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkIXp3ciheyPql/p5n3V+6",
+      "authorship_tag": "ABX9TyN292DsFzsWbUoCUOIeHdx7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -574,7 +574,13 @@
         "# Sort dataframe by date\n",
         "# Get list of patient's AccountNos\n",
         "# Go through each patient's AccountNos and get the Admit.Date column for the subset of that corresponding dataframe\n",
-        "# Get difference between last admit.date and inital.date and assign it to patietn AccountNo in dictionary"
+        "# Get difference between last admit.date and inital.date and assign it to patietn AccountNo in dictionary\n",
+        "\n",
+        "# Make copy of dataframe, so you have df and cp_df\n",
+        "# Group df by Admit.date and get min\n",
+        "# Group cp_df by Admit.date and get max\n",
+        "# Put the cp_df max Admit.date column into df\n",
+        "# Create time elapsed column in df, which is subtraction between min Admit.date and max Admit.date"
       ],
       "metadata": {
         "id": "B1e3C4yeH8qC"
