--- a/Code/basicEDA.ipynb
+++ b/Code/basicEDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN292DsFzsWbUoCUOIeHdx7",
+      "authorship_tag": "ABX9TyPKrTNLuubNV80w1uX3aQ23",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "H7ubmnUYSdVY",
-        "outputId": "1286d3e9-23d0-4ca5-dd1c-c8c64bb9352f"
+        "outputId": "0091142e-b465-4194-f58f-2c421cdc514e"
       },
       "outputs": [
         {
@@ -59,13 +59,15 @@
       "metadata": {
         "id": "8vG9es7nULlf"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "data"
+        "data['Admit.Date'] = pd.to_datetime(data['Admit.Date'])\n",
+        "data['Discharge.Date'] = pd.to_datetime(data['Admit.Date'])\n",
+        "data\n"
       ],
       "metadata": {
         "colab": {
@@ -73,9 +75,9 @@
           "height": 579
         },
         "id": "cEIgl_cbVN_v",
-        "outputId": "03e6b4c0-f231-4668-c26e-8fba83c278d3"
+        "outputId": "a205192a-0eba-492d-aac4-09e617fe76d8"
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -94,18 +96,18 @@
               "1381   AB99715     Emergency     Albert      Chin   \n",
               "1382   AB99715     Emergency     Albert      Chin   \n",
               "\n",
-              "                                 Visit.Facility  Admit.Date Discharge.Date  \\\n",
-              "0      HCA - Henrico Doctors' (Forest) Hospital  10/23/2022     10/23/2022   \n",
-              "1     Bon Secours - Short Pump Emergency Center    1/2/2023       1/2/2023   \n",
-              "2                HCA - Parham Doctors' Hospital    5/2/2022       5/3/2022   \n",
-              "3      HCA - Henrico Doctors' (Forest) Hospital  11/17/2021     11/18/2021   \n",
-              "4                HCA - Parham Doctors' Hospital    6/5/2022       6/6/2022   \n",
-              "...                                         ...         ...            ...   \n",
-              "1378                  HCA - Chippenham Hospital   1/15/2022            NaN   \n",
-              "1379          Bon Secours - St. Mary's Hospital   1/11/2022      1/14/2022   \n",
-              "1380                  HCA - Chippenham Hospital   6/14/2022      6/14/2022   \n",
-              "1381             HCA - Johnston-Willis Hospital   6/24/2022      7/12/2022   \n",
-              "1382         HCA - Swift Creek Emergency Center   6/24/2022            NaN   \n",
+              "                                 Visit.Facility Admit.Date Discharge.Date  \\\n",
+              "0      HCA - Henrico Doctors' (Forest) Hospital 2022-10-23     2022-10-23   \n",
+              "1     Bon Secours - Short Pump Emergency Center 2023-01-02     2023-01-02   \n",
+              "2                HCA - Parham Doctors' Hospital 2022-05-02     2022-05-02   \n",
+              "3      HCA - Henrico Doctors' (Forest) Hospital 2021-11-17     2021-11-17   \n",
+              "4                HCA - Parham Doctors' Hospital 2022-06-05     2022-06-05   \n",
+              "...                                         ...        ...            ...   \n",
+              "1378                  HCA - Chippenham Hospital 2022-01-15     2022-01-15   \n",
+              "1379          Bon Secours - St. Mary's Hospital 2022-01-11     2022-01-11   \n",
+              "1380                  HCA - Chippenham Hospital 2022-06-14     2022-06-14   \n",
+              "1381             HCA - Johnston-Willis Hospital 2022-06-24     2022-06-24   \n",
+              "1382         HCA - Swift Creek Emergency Center 2022-06-24     2022-06-24   \n",
               "\n",
               "                                              Diagnoses Major.Class.y  \\\n",
               "0     M25512:Pain in left shoulder; N390:Urinary tra...     Emergency   \n",
@@ -150,7 +152,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-257f2543-5777-4973-999c-b2bfb89a4d0d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b2a476bb-cefb-4b93-b404-6d89d0adc1e5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -191,8 +193,8 @@
               "      <td>Maria</td>\n",
               "      <td>Diaz</td>\n",
               "      <td>HCA - Henrico Doctors' (Forest) Hospital</td>\n",
-              "      <td>10/23/2022</td>\n",
-              "      <td>10/23/2022</td>\n",
+              "      <td>2022-10-23</td>\n",
+              "      <td>2022-10-23</td>\n",
               "      <td>M25512:Pain in left shoulder; N390:Urinary tra...</td>\n",
               "      <td>Emergency</td>\n",
               "      <td>HCA</td>\n",
@@ -206,8 +208,8 @@
               "      <td>Maria</td>\n",
               "      <td>Diaz</td>\n",
               "      <td>Bon Secours - Short Pump Emergency Center</td>\n",
-              "      <td>1/2/2023</td>\n",
-              "      <td>1/2/2023</td>\n",
+              "      <td>2023-01-02</td>\n",
+              "      <td>2023-01-02</td>\n",
               "      <td>J189:Pneumonia, unspecified organism; R0789:Ot...</td>\n",
               "      <td>Emergency</td>\n",
               "      <td>Bon Secours</td>\n",
@@ -221,8 +223,8 @@
               "      <td>Maria</td>\n",
               "      <td>Diaz</td>\n",
               "      <td>HCA - Parham Doctors' Hospital</td>\n",
-              "      <td>5/2/2022</td>\n",
-              "      <td>5/3/2022</td>\n",
+              "      <td>2022-05-02</td>\n",
+              "      <td>2022-05-02</td>\n",
               "      <td>N390:Urinary tract infection, site not specifi...</td>\n",
               "      <td>Emergency</td>\n",
               "      <td>HCA</td>\n",
@@ -236,8 +238,8 @@
               "      <td>Maria</td>\n",
               "      <td>Diaz</td>\n",
               "      <td>HCA - Henrico Doctors' (Forest) Hospital</td>\n",
-              "      <td>11/17/2021</td>\n",
-              "      <td>11/18/2021</td>\n",
+              "      <td>2021-11-17</td>\n",
+              "      <td>2021-11-17</td>\n",
               "      <td>R519:Headache, unspecified</td>\n",
               "      <td>Emergency</td>\n",
               "      <td>HCA</td>\n",
@@ -251,8 +253,8 @@
               "      <td>Maria</td>\n",
               "      <td>Diaz</td>\n",
               "      <td>HCA - Parham Doctors' Hospital</td>\n",
-              "      <td>6/5/2022</td>\n",
-              "      <td>6/6/2022</td>\n",
+              "      <td>2022-06-05</td>\n",
+              "      <td>2022-06-05</td>\n",
               "      <td>N390:Urinary tract infection, site not specifi...</td>\n",
               "      <td>Emergency</td>\n",
               "      <td>HCA</td>\n",
@@ -281,8 +283,8 @@
               "      <td>Albert</td>\n",
               "      <td>Chin</td>\n",
               "      <td>HCA - Chippenham Hospital</td>\n",
-              "      <td>1/15/2022</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>2022-01-15</td>\n",
+              "      <td>2022-01-15</td>\n",
               "      <td>NaN</td>\n",
               "      <td>Emergency</td>\n",
               "      <td>HCA</td>\n",
@@ -296,8 +298,8 @@
               "      <td>Albert</td>\n",
               "      <td>Chin</td>\n",
               "      <td>Bon Secours - St. Mary's Hospital</td>\n",
-              "      <td>1/11/2022</td>\n",
-              "      <td>1/14/2022</td>\n",
+              "      <td>2022-01-11</td>\n",
+              "      <td>2022-01-11</td>\n",
               "      <td>N189:Chronic kidney disease, unspecified; A419...</td>\n",
               "      <td>Inpatient</td>\n",
               "      <td>Bon Secours</td>\n",
@@ -311,8 +313,8 @@
               "      <td>Albert</td>\n",
               "      <td>Chin</td>\n",
               "      <td>HCA - Chippenham Hospital</td>\n",
-              "      <td>6/14/2022</td>\n",
-              "      <td>6/14/2022</td>\n",
+              "      <td>2022-06-14</td>\n",
+              "      <td>2022-06-14</td>\n",
               "      <td>Z87891:Personal history of nicotine dependence...</td>\n",
               "      <td>Emergency</td>\n",
               "      <td>HCA</td>\n",
@@ -326,8 +328,8 @@
               "      <td>Albert</td>\n",
               "      <td>Chin</td>\n",
               "      <td>HCA - Johnston-Willis Hospital</td>\n",
-              "      <td>6/24/2022</td>\n",
-              "      <td>7/12/2022</td>\n",
+              "      <td>2022-06-24</td>\n",
+              "      <td>2022-06-24</td>\n",
               "      <td>C61:Malignant neoplasm of prostate; Z923:Perso...</td>\n",
               "      <td>Inpatient</td>\n",
               "      <td>HCA</td>\n",
@@ -341,8 +343,8 @@
               "      <td>Albert</td>\n",
               "      <td>Chin</td>\n",
               "      <td>HCA - Swift Creek Emergency Center</td>\n",
-              "      <td>6/24/2022</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>2022-06-24</td>\n",
+              "      <td>2022-06-24</td>\n",
               "      <td>NaN</td>\n",
               "      <td>Emergency</td>\n",
               "      <td>HCA</td>\n",
@@ -356,7 +358,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-257f2543-5777-4973-999c-b2bfb89a4d0d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b2a476bb-cefb-4b93-b404-6d89d0adc1e5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -408,12 +410,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-257f2543-5777-4973-999c-b2bfb89a4d0d button.colab-df-convert');\n",
+              "        document.querySelector('#df-b2a476bb-cefb-4b93-b404-6d89d0adc1e5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-257f2543-5777-4973-999c-b2bfb89a4d0d');\n",
+              "        const element = document.querySelector('#df-b2a476bb-cefb-4b93-b404-6d89d0adc1e5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -433,8 +435,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b3d95625-967a-4ba7-8535-e8ad2552e999\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b3d95625-967a-4ba7-8535-e8ad2552e999')\"\n",
+              "<div id=\"df-54d7ff64-d1bc-4151-ba29-454c1c0ca5e8\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-54d7ff64-d1bc-4151-ba29-454c1c0ca5e8')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -553,7 +555,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b3d95625-967a-4ba7-8535-e8ad2552e999 button');\n",
+              "        document.querySelector('#df-54d7ff64-d1bc-4151-ba29-454c1c0ca5e8 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -564,29 +566,63 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 67
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Sort dataframe by date\n",
-        "# Get list of patient's AccountNos\n",
-        "# Go through each patient's AccountNos and get the Admit.Date column for the subset of that corresponding dataframe\n",
-        "# Get difference between last admit.date and inital.date and assign it to patietn AccountNo in dictionary\n",
+        "def get_elapsed_time_between_first_and_last_visit(df):\n",
+        "  # Make copy of dataframe, so you have df and cp_df\n",
+        "  # Group df by Admit.date and get min\n",
+        "  # Group cp_df by Admit.date and get max\n",
+        "  # Put the cp_df max Admit.date column into df\n",
+        "  # Create time elapsed column in df, which is subtraction between min Admit.date and max Admit.date\n",
         "\n",
-        "# Make copy of dataframe, so you have df and cp_df\n",
-        "# Group df by Admit.date and get min\n",
-        "# Group cp_df by Admit.date and get max\n",
-        "# Put the cp_df max Admit.date column into df\n",
-        "# Create time elapsed column in df, which is subtraction between min Admit.date and max Admit.date"
+        "  df = df[[\"AccountNo\", \"Admit.Date\"]]\n",
+        "  cp_df = df.copy()\n",
+        "  max_df = df.groupby([\"AccountNo\"]).max()\n",
+        "  min_df = cp_df.groupby([\"AccountNo\"]).min()\n",
+        "  merged_df = max_df.merge(min_df, on = \"AccountNo\")\n",
+        "\n",
+        "  merged_df[\"Time_Elapsed_in_Days\"] = (merged_df['Admit.Date_x'] - merged_df['Admit.Date_y'])\n",
+        "  merged_df['Time_Elapsed_in_Days'] = merged_df['Time_Elapsed_in_Days'] / pd.Timedelta(days=1)\n",
+        "  merged_df[\"Time_Elapsed_in_Years\"] = merged_df['Time_Elapsed_in_Days'] / 365\n",
+        "\n",
+        "  print(merged_df[\"Time_Elapsed_in_Years\"].mean())\n",
+        "  print(merged_df[merged_df[\"Time_Elapsed_in_Years\"] > 1][\"Time_Elapsed_in_Years\"].median())\n",
+        "\n"
       ],
       "metadata": {
-        "id": "B1e3C4yeH8qC"
+        "id": "xvWe-Vx9rcWZ"
       },
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_elapsed_time_between_first_and_last_visit(data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3HcMTml4vFj7",
+        "outputId": "e24a5433-0433-437a-cbe3-ebb9d7f708e6"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9340015591936741\n",
+            "1.189041095890411\n"
+          ]
+        }
+      ]
     }
   ]
 }
